--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -11,7 +11,7 @@ body,
 body {
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  /* height: 100vh; */
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.9),
@@ -20,7 +20,10 @@ body {
     url("../assets/images/background.webp");
 
   color: white;
+  width: 100%;
 }
+
+
 
 p {
   margin: 0;
