--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -5,13 +5,12 @@ body,
   direction: rtl;
   margin: 0;
   padding: 0;
-  /* user-select: none; */
+  user-select: none;
 }
 
 body {
-  background-repeat: no-repeat;
   background-size: cover;
-  /* height: 100vh; */
+  height: 100vh;
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.9),
